--- a/src/main/assets/errorpage.html
+++ b/src/main/assets/errorpage.html
@@ -3,7 +3,7 @@
 <head>
     <style>
         html{
-        background:#2E2E2E;
+        background:#404040;
         }
         h4{
         color:#ecf0f1;
